simple-go-rest-api-student/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application
  labels:
    app: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: application
  template:
    metadata:
      labels:
        app: application
    spec:
      containers:
      - name: application
        image: mehrnazsa/simple-go-rest-api-student-app
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: "0.5"    
            memory: "512Mi"  
          requests:
            cpu: "0.1"     
            memory: "256Mi" 
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: application
  type: LoadBalancer  
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30000
