simple-go-rest-api-student/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: app-ingress
# spec:
#   rules:
#     - host: mehrnaz.com  
#       http:
#         paths:
#           - path: /healthcheck
#             pathType: Prefix
#             backend:
#               service:
#                 name: app-service
#                 port:
#                   number: 8000
#           - path: /texts
#             pathType: Prefix
#             backend:
#               service:
#                 name: app-service
#                 port:
#                   number: 8000
#           - path: /texts/.*
#             pathType: Prefix
#             backend:
#               service:
#                 name: app-service
#                 port:
#                   number: 8000

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: mehrnaz.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              number: 8000
